# gensync-core

./: .gitignore  Benchmark  Benchmarks  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  EncodeJoin  GenericSyncTests  README.md  TryMe  TryMe2
.github/workflows/: ccpp.yml
doc/code/: Communicants.md
include/GenSync/Aux/: Auxiliary.h  ConstantsAndTypes.h  Sketches.h  SyncMethod.h  UID.h
include/GenSync/Auxiliary/: Auxiliary.h  ConstantsAndTypes.h  Exceptions.h  SyncMethod.h  UID.h
include/GenSync/Benchmarks/: BenchObserv.h  BenchParams.h  FromFileGen.h
include/GenSync/Communicants/: CommSocket.h  CommSocketUDP.h  Communicant.h
include/GenSync/Data/: DataContainer.h  DataFileC.h  DataMemC.h  DataObjC.h  DataObject.h  DatabaseContainer.h  InMemContainer.h  SQLiteContainer.h
include/GenSync/Syncs/: Adaptive_IBLT.h  BloomFilter.h  BloomFilterSync.h  CPISync.h  Compact2DBitArray.h  Cuckoo.h  CuckooSync.h  FullSync.h  GenIBLT.h  GenSync.h  HashSync.h  IBLT.h  IBLTMultiset.h  IBLTSetOfSets.h  IBLTSync.h  IBLTSync_Adaptive.h  IBLTSync_Adaptive_PartialDecode.h  IBLTSync_Multiset.h  InterCPISync.h  MET_IBLT.h  MET_IBLTSync.h  RIBLT.h  RIBLTSync.h
src/: TryMe.cpp  TryMe2.cpp  main.cpp  riblt_unittest.cpp  test_adaptive.cpp  test_met.cpp  test_riblt.cpp
src/Aux/: SyncMethod.cpp
src/Auxiliary/: Logger.cpp  Sketches.cpp  SyncMethod.cpp  UID.cpp
src/Benchmarks/: BenchParams.cpp
src/Communicants/: CommSocket.cpp  CommSocketUDP.cpp  CommString.cpp  Communicant.cpp
src/Data/: InMemContainer.cpp  SQLiteContainer.cpp
src/Syncs/: Adaptive_IBLT.cpp  BloomFilter.cpp  BloomFilterSync.cpp  CPISync.cpp  Compact2DBitArray.cpp  CuckooSync.cpp  GenIBLT.cpp  GenSync.cpp  HashSync.cpp  IBLT.cpp  IBLTSetOfSets.cpp  IBLTSync.cpp  IBLTSync_Adaptive.cpp  IBLTSync_Adaptive_PartialDecode.cpp  IBLTSync_Multiset.cpp  InterCPISync.cpp  MET_IBLT.cpp  MET_IBLTSync.cpp  RIBLT.cpp  RIBLTSync.cpp  probCPISync.cpp
src/Tools/: EncodeJoin.cpp
tests/: TestAuxiliary.h  TestRunner.cpp  testRunner.cpp
tests/sys/benchmark/: BenchmarkTest.cpp  BenchmarkTest.h
tests/sys/long/: GenericSyncTests.cpp  GenericSyncTests.h
tests/unit/: AuxiliaryTest.cpp  BloomFilterSyncTest.cpp  BloomFilterSyncTest.h  BloomFilterTest.cpp  BloomFilterTest.h  CPISyncTest.cpp  CommSocketTest.cpp  CommStringTest.cpp  CommunicantTest.cpp  CommunicantTest.h  CuckooSyncTest.cpp  CuckooTest.h  DataObjectTest.cpp  DataPriorityObjectTest.cpp  FullSyncTest.cpp  GenIBLTTest.cpp  GenIBLTTest.h  IBLTSetOfSetsTest.cpp  IBLTSetOfSetsTest.h  IBLTSyncTest.cpp  IBLTSyncTest.h  IBLTSync_AdaptiveTest.cpp  IBLTSync_AdaptiveTest.h  IBLTSync_Adaptive_PartialDecodeTest.cpp  IBLTSync_Adaptive_PartialDecodeTest.h  IBLTTest.cpp  IBLTTest.h  InMemContainerTest.cpp  InMemContainerTest.h  MET_IBLTSyncTest.cpp  MET_IBLTSyncTest.h  MET_IBLTTest.cpp  MET_IBLTTest.h  SQLiteContainerTest.cpp  SQLiteContainerTest.h
tests/unit/include/: BloomFilterSyncTest.h  BloomFilterTest.h  Compact2DBitArrayTest.h
